# cbp-ng

./: AUTHORS  CMakeLists.txt  LICENSE  README  README.md  TODO  branch_predictor.hpp  cbp.cpp  cbp.hpp  compile  gshare.hpp  harcom.hpp  ipc_cpi_epi.py  predictor_metrics.py  ratio  reference.cpp  run  run_all  seznec_cbp2025.h  shell.nix  synthetic_trace.hpp  tage.hpp  test_harcom.cpp  vfs.py
.github/workflows/: test.yml
predictors/: always_taken.hpp  bimodal.hpp  bimodalN.hpp  common.hpp  gehl.hpp  gshare.hpp  gshareN.hpp  gshareN_ahead.hpp  hashed_perceptron.hpp  never_taken.hpp  perceptron.hpp  tage.hpp
